package Users;

public class Buhgalter extends Employee{

    public Buhgalter(String gSurname, String gName, String gOtchestvo, int gUserId, int gUserPositionId) {
        super(gSurname, gName, gOtchestvo, gUserId, gUserPositionId);
    }
}
