package Users;

public class Director extends Employee{

    public Director(String gSurname, String gName, String gOtchestvo, int gUserId, int gUserPositionId) {
        super(gSurname, gName, gOtchestvo, gUserId, gUserPositionId);
    }
}
