@startuml

title __USERS's Class Diagram__\n

  namespace Users {
    class Users.Admin {
        + Admin()
    }
  }
  

  namespace Users {
    class Users.Buhgalter {
        + Buhgalter()
    }
  }
  

  namespace Users {
    class Users.Director {
        + Director()
    }
  }
  

  namespace Users {
    class Users.Employee {
        + Employee()
        + getAddZppH()
        + getExtra()
        + getFinalZp()
        + getIllHours()
        + getIsExtra()
        + getPositionZppH()
        + getTotalAddZppH()
        + getTotalBaseZP()
        + getTotalNotAddZppH()
        + getTotalNotExtraMoney()
        + getTotalZp()
        + getWorkingHours()
    }
  }
  

  namespace Users {
    abstract class Users.User {
        ~ name : String
        ~ otchestvo : String
        ~ surname : String
        ~ userId : int
        ~ userPositionId : int
        + getName()
        + getOtchestvo()
        + getSurname()
        + getUserId()
        + getUserPositionId()
        + setName()
        + setOtchestvo()
        + setSurname()
        + setUserId()
        + setUserPositionId()
        ~ User()
    }
  }
  

  Users.Admin -up-|> Users.Employee
  Users.Buhgalter -up-|> Users.Employee
  Users.Director -up-|> Users.Employee
  Users.Employee -up-|> Users.User


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
